Auto stash before merge of "master" and "origin/master"
category index add

--- a/Java/index.html
+++ b/Java/index.html
@@ -37,7 +37,7 @@ layout: default
     
 
 
-    {% if paginator.total_pages > 1 %}
+    <!-- {% if paginator.total_pages > 1 %}
     <ul class="pagination">
 
       {% if paginator.previous_page %}
@@ -75,4 +75,4 @@ layout: default
     </ul>
    {% endif %}
 
-     
+      -->
