--- a/js/index.html
+++ b/js/index.html
@@ -37,7 +37,7 @@ layout: default
     
 
 
-    {% if paginator.total_pages > 1 %}
+    <!-- {% if paginator.total_pages > 1 %}
     <ul class="pagination">
 
       {% if paginator.previous_page %}
@@ -75,4 +75,4 @@ layout: default
     </ul>
    {% endif %}
 
-     
+      -->
